<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meigara"/>
            <EditText
                android:id="@+id/editMeigara"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textSize="20sp"
                android:gravity="center"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shutoku_kabuka"/>
            <EditText
                android:id="@+id/editShutokuKabuKa"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shutoku_kabusuu"/>
            <EditText
                android:id="@+id/editShutokuKabuSuu"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hitokabu_haitou"/>
            <EditText
                android:id="@+id/editHitokabuHaitou1"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:inputType="number"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="."/>
            <EditText
                android:id="@+id/editHitokabuHaitou2"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:inputType="number"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zeiritsu"/>
            <TextView
                android:id="@+id/textZeiritsu"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:inputType="number"
                android:text="@string/zeiritsu_persent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">
            <TextView
                android:gravity="center"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shutoku_kingaku"/>
            <TextView
                android:id="@+id/textShutokuKingaku"
                android:textStyle="bold"
                android:textSize="20sp"
                android:gravity="center"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/textHide"
            android:text="@string/hide"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="14sp"
            android:layout_marginTop="4dp"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            android:background="@color/pBlue"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>